# paint-ray

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/controllers/: PaintController.cpp  PaintController.h
src/core/: SplashScreen.cpp  SplashScreen.h
src/models/: PaintDocument.cpp  PaintDocument.h
src/shapes/: BezierCurve.cpp  BezierCurve.h  Circle.cpp  Circle.h  EllipseShape.cpp  EllipseShape.h  Line.cpp  Line.h  RectangleShape.cpp  RectangleShape.h  Shape.h  Triangle.cpp  Triangle.h
src/views/: PaintView.cpp  PaintView.h
